# MonocularBiomechanics

./: .gitignore  README.md  index.html  main.py  monocular-demo.ipynb  pyproject.toml  requirements.linux
analysis/: compute_clinical_errors.py  compute_movi_errors.py  render_comparison.py
data/: README.md  monocular_combined_joint_errors.csv  static_combined_joint_errors.csv
docs/: index.html
monocular_demos/: __init__.py  camera.py  dataset.py
monocular_demos/biomechanics_mjx/: monocular_trajectory.py  visualize.py
tests/: test_pipeline.py  test_rendering.py
