[tool.black]
line-length = 150

[project]
name = "monocular_demos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "equinox",
    "gradio",
    "jax[cuda12]",
    "jaxlie",
    "jmp",
    "mujoco-mjx",
    "numpy-stl",
    "opencv-python",
    "optax",
    "plotly",
    "PyOpenGL",
    "pyrender",
    "tensorflow[and-cuda]",
    "tensorflow_hub",
    "trimesh",
]

[project.optional-dependencies]
notebooks = [
    "ipykernel",
    "matplotlib",
    "numpy",
]

[tool.setuptools.packages.find]
include = ["monocular_demos*"]

[tool.setuptools.package-data]
"*" = ["biomechanics_mjx/data/humanoid/**/*"]
