[tool.black]
line-length = 150

[project]
name = "monocular_demos"
version = "0.1.0"
description = "Biomechanical fitting from monocular video"
readme = "README.md"
authors = [
    {name = "J.D. Peiffer"}
]
requires-python = "~=3.11.0"
dependencies = [
    "equinox",
    "gradio",
    "jax",
    "jaxlie",
    "jmp",
    "mujoco-mjx",
    "numpy-stl",
    "opencv-python",
    "optax",
    "plotly",
    "PyOpenGL",
    "pyrender",
    "tensorflow",
    "tensorflow_hub",
    "trimesh",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda12]",
    "tensorflow[and-cuda]",
]
notebooks = [
    "ipykernel",
    "matplotlib",
    "numpy",
]

[tool.setuptools.packages.find]
include = ["monocular_demos*"]

[tool.setuptools.package-data]
"*" = ["biomechanics_mjx/data/humanoid/**/*"]
