[tool.black]
line-length = 150

[project]
name = "monocular_demos"
version = "0.1.0"
description = "Biomechanical fitting from monocular video"
readme = "README.md"
authors = [
    {name = "J.D. Peiffer"}
]
requires-python = ">=3.11"
dependencies = [
    "equinox",
    "gradio",
    "jax",
    "jaxlie",
    "jmp",
    "mujoco-mjx",
    "numpy-stl",
    "opencv-python",
    "optax",
    "plotly",
    "PyOpenGL>=3.1.4",
    "pyrender",
    "tensorflow",
    "tensorflow_hub",
    "trimesh",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda12]",
    "tensorflow[and-cuda]",
]
notebooks = [
    "ipykernel",
    "matplotlib",
    "numpy",
]
dev = [
    "pytest",
]

[tool.uv]
override-dependencies = ["PyOpenGL==3.1.10"]

[tool.pytest.ini_options]
pythonpath = ["."]


[tool.setuptools.packages.find]
include = ["monocular_demos*"]

[tool.setuptools.package-data]
"*" = ["biomechanics_mjx/data/humanoid/**/*"]
